--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             // ==========================================================
             // ⚠️ IMPORTANTE: TROQUE PELO SEU LINK DA PAGINA B AQUI!
             // ==========================================================
-            const urlPaginaB = 'https://SEU_USUARIO.github.io/conferencia.html'; 
+            const urlPaginaB = 'https://check-confirm.netlify.app/'; 
             
             // Coletar dados
             const extra = document.getElementById('extra').value;
