--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de Checklist</title>
+    <title>Gerador de Link de Checklist</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <style>
         body { font-family: sans-serif; padding: 20px; background: #f4f7f6; }
-        .card { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        .card { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); max-width: 500px; margin: auto; }
         input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; font-size: 16px; }
-        button { width: 100%; padding: 15px; background: #25d366; color: white; border: none; border-radius: 4px; font-weight: bold; cursor: pointer; }
+        button { width: 100%; padding: 15px; background: #25d366; color: white; border: none; border-radius: 4px; font-weight: bold; cursor: pointer; font-size: 1.1em; }
+        button:hover { background: #128c7e; }
+        #link-area { margin-top: 15px; display: none; word-break: break-all; background: #eee; padding: 10px; border-radius: 4px; font-size: 0.8em; }
     </style>
 </head>
 <body>
@@ -18,11 +20,13 @@
         <input type="text" id="extra" placeholder="Código de Barra Extra">
         <input type="text" id="comercial" placeholder="Código de Barra Comercial">
         <input type="text" id="popular" placeholder="Código de Barra Popular">
-        <button onclick="gerarEEnviar()">Gerar Arquivo Criptografado</button>
+        <button onclick="gerarLink()">Gerar e Enviar no WhatsApp</button>
+        
+        <div id="link-area"></div>
     </div>
 
     <script>
-        function gerarEEnviar() {
+        function gerarLink() {
             const dados = {
                 extra: document.getElementById('extra').value,
                 comercial: document.getElementById('comercial').value,
@@ -35,19 +39,27 @@
                 return;
             }
 
-            // Criptografando (Senha padrão: 'chave-mestra-123')
+            // 1. Criptografando
             const jsonStr = JSON.stringify(dados);
             const criptografado = CryptoJS.AES.encrypt(jsonStr, 'chave-mestra-123').toString();
 
-            // Criar arquivo para download/envio
-            const blob = new Blob([criptografado], {type: "text/plain"});
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = `checklist_${Date.now()}.check`;
-            a.click();
+            // 2. Codificando para URL (importante para evitar erros com caracteres especiais)
+            const paramData = encodeURIComponent(criptografado);
+
+            // 3. Montando o Link
+            const baseUrl = "https://check-confirm.netlify.app/";
+            const finalLink = `${baseUrl}?data=${paramData}`;
+
+            // Exibir link na tela (opcional)
+            const linkArea = document.getElementById('link-area');
+            linkArea.style.display = 'block';
+            linkArea.innerText = "Link gerado: " + finalLink;
+
+            // 4. Abrir WhatsApp
+            const textoZap = `Olá, segue o link para conferência: ${finalLink}`;
+            const zapUrl = `https://wa.me/?text=${encodeURIComponent(textoZap)}`;
             
-            alert("Arquivo gerado! Agora envie pelo WhatsApp.");
+            window.open(zapUrl, '_blank');
         }
     </script>
 </body>
